--- a/security/Kconfig
+++ b/security/Kconfig
@@ -291,5 +291,7 @@ config LSM
 
 source "security/Kconfig.hardening"
 
+source "security/samsung/mz/Kconfig" # ADDED BY LEGO AUTOMATICALLY: DO NOT SUBMIT
+source "security/samsung/mz_tee_driver/Kconfig" # ADDED BY LEGO AUTOMATICALLY: DO NOT SUBMIT
 endmenu
 
