--- a/arch/arm64/configs/exynos2100-o1sxxx_defconfig
+++ b/arch/arm64/configs/exynos2100-o1sxxx_defconfig
@@ -176,6 +176,7 @@ CONFIG_SCHED_USE_FLUID_RT=y
 # CONFIG_RELAY is not set
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_INITRAMFS_SOURCE=""
+# CONFIG_INITRAMFS_FORCE is not set
 CONFIG_RD_GZIP=y
 # CONFIG_RD_BZIP2 is not set
 # CONFIG_RD_LZMA is not set
@@ -385,7 +386,6 @@ CONFIG_SYS_SUPPORTS_HUGETLBFS=y
 CONFIG_ARCH_WANT_HUGE_PMD_SHARE=y
 CONFIG_ARCH_HAS_CACHE_LINE_SIZE=y
 CONFIG_ARCH_ENABLE_SPLIT_PMD_PTLOCK=y
-CONFIG_CC_HAVE_SHADOW_CALL_STACK=y
 CONFIG_SECCOMP=y
 CONFIG_PARAVIRT=y
 # CONFIG_PARAVIRT_TIME_ACCOUNTING is not set
@@ -404,7 +404,6 @@ CONFIG_ARM64_SW_TTBR0_PAN=y
 CONFIG_ARM64_TAGGED_ADDR_ABI=y
 CONFIG_COMPAT=y
 CONFIG_KUSER_HELPERS=y
-CONFIG_COMPAT_VDSO=y
 CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
 CONFIG_CP15_BARRIER_EMULATION=y
@@ -452,7 +451,9 @@ CONFIG_RANDOMIZE_MODULE_REGION_FULL=y
 # Boot options
 #
 CONFIG_CMDLINE="androidboot.selinux=permissive"
+# CONFIG_CMDLINE_FROM_BOOTLOADER is not set
 CONFIG_CMDLINE_EXTEND=y
+# CONFIG_CMDLINE_FORCE is not set
 CONFIG_EFI_STUB=y
 CONFIG_EFI=y
 # CONFIG_DMI is not set
@@ -734,6 +735,7 @@ CONFIG_ASM_MODVERSIONS=y
 # CONFIG_UNUSED_SYMBOLS is not set
 CONFIG_TRIM_UNUSED_KSYMS=y
 CONFIG_UNUSED_KSYMS_WHITELIST="gki/abi_symbollist.raw"
+CONFIG_KMI_SYMBOL_LISTS=""
 CONFIG_MODULES_TREE_LOOKUP=y
 CONFIG_BLOCK=y
 CONFIG_BLK_SCSI_REQUEST=y
@@ -757,11 +759,6 @@ CONFIG_BLK_SEC_STATS=m
 # CONFIG_PARTITION_ADVANCED is not set
 CONFIG_MSDOS_PARTITION=y
 CONFIG_EFI_PARTITION=y
-
-#
-# Block kunit
-#
-# end of Block kunit
 # end of Partition Types
 
 CONFIG_BLOCK_COMPAT=y
@@ -6214,7 +6211,6 @@ CONFIG_SEC_DEBUG_HANDLE_BAD_STACK=y
 CONFIG_SEC_DEBUG_STACKTRACE=m
 CONFIG_SEC_DEBUG_HARDLOCKUP_INFO=m
 CONFIG_SEC_DEBUG_SCHED_REPORT=m
-# CONFIG_ICD is not set
 CONFIG_DEV_RIL_BRIDGE=m
 CONFIG_SEC_VIBRATOR=m
 CONFIG_SEC_VIB_NOTIFIER=y
@@ -6286,21 +6282,11 @@ CONFIG_MUIC_AFC_RETRY=y
 # Samsung STI Options
 #
 CONFIG_SEC_STI=y
-CONFIG_SEC_AUTO_INPUT=m
 CONFIG_SEC_INPUT_BOOSTER=m
 # CONFIG_SEC_INPUT_BOOSTER_MODE is not set
 # CONFIG_SEC_INPUT_BOOSTER_QC is not set
 CONFIG_SEC_INPUT_BOOSTER_SLSI=y
 # CONFIG_SEC_INPUT_BOOSTER_MTK is not set
-# CONFIG_TZIC is not set
-
-#
-# samsung Performace manager
-#
-CONFIG_KPERFMON=y
-CONFIG_KPERFMON_BUILD=m
-# end of samsung Performace manager
-
 CONFIG_INPUT_SEC_INPUT=m
 CONFIG_SEC_DEBUG_TSP_LOG=m
 CONFIG_INPUT_TOUCHSCREEN_TCLMV2=m
@@ -6613,7 +6599,6 @@ CONFIG_MANDATORY_FILE_LOCKING=y
 CONFIG_FS_ENCRYPTION=y
 CONFIG_FS_ENCRYPTION_ALGS=y
 CONFIG_FS_ENCRYPTION_INLINE_CRYPT=y
-CONFIG_FSCRYPT_SDP=y
 CONFIG_FS_VERITY=y
 # CONFIG_FS_VERITY_DEBUG is not set
 CONFIG_FS_VERITY_BUILTIN_SIGNATURES=y
@@ -6813,11 +6798,6 @@ CONFIG_NLS_UTF8=y
 # CONFIG_DLM is not set
 CONFIG_UNICODE=y
 # CONFIG_UNICODE_NORMALIZATION_SELFTEST is not set
-
-#
-# File systems kunit
-#
-# end of File systems kunit
 # end of File systems
 
 #
@@ -6868,9 +6848,6 @@ CONFIG_INTEGRITY_AUDIT=y
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
 CONFIG_LSM="lockdown,yama,loadpin,safesetid,integrity,selinux,smack,tomoyo,apparmor"
-CONFIG_SDP=y
-CONFIG_DDAR=y
-# CONFIG_SDP_KEY_DUMP is not set
 
 #
 # Kernel hardening options
@@ -6889,29 +6866,8 @@ CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y
 # end of Memory initialization
 # end of Kernel hardening options
 
-CONFIG_SECURITY_DEFEX=y
-# CONFIG_DEFEX_KERNEL_ONLY is not set
-CONFIG_PROCA=y
-CONFIG_PROCA_GKI_10=y
-CONFIG_PROCA_S_OS=y
-CONFIG_GAF=y
-# CONFIG_GAF_V3 is not set
-# CONFIG_GAF_V4 is not set
-# CONFIG_GAF_V5 is not set
-CONFIG_GAF_V6=y
-CONFIG_SECURITY_DSMS=y
 # CONFIG_MEMORY_ZEROISATION is not set
 # CONFIG_MZ_PAGE_V2 is not set
-CONFIG_FIVE=y
-CONFIG_FIVE_GKI_10=y
-# CONFIG_FIVE_GKI_20 is not set
-# CONFIG_FIVE_DEBUG is not set
-CONFIG_FIVE_CERT_USER="x509_five_user.der"
-CONFIG_FIVE_DEFAULT_HASH_SHA1=y
-# CONFIG_FIVE_DEFAULT_HASH_SHA256 is not set
-# CONFIG_FIVE_DEFAULT_HASH_SHA512 is not set
-CONFIG_FIVE_DEFAULT_HASH="sha1"
-CONFIG_FIVE_TRUSTED_KEYRING=y
 # end of Security options
 
 CONFIG_CRYPTO=y
@@ -7222,7 +7178,6 @@ CONFIG_OID_REGISTRY=y
 CONFIG_UCS2_STRING=y
 CONFIG_HAVE_GENERIC_VDSO=y
 CONFIG_GENERIC_GETTIMEOFDAY=y
-CONFIG_GENERIC_COMPAT_VDSO=y
 CONFIG_FONT_SUPPORT=y
 CONFIG_FONT_8x16=y
 CONFIG_FONT_AUTOSELECT=y
@@ -7380,6 +7335,7 @@ CONFIG_FUNCTION_ERROR_INJECTION=y
 # CONFIG_LATENCYTOP is not set
 CONFIG_NOP_TRACER=y
 CONFIG_HAVE_FUNCTION_TRACER=y
+CONFIG_HAVE_FUNCTION_GRAPH_TRACER=y
 CONFIG_HAVE_DYNAMIC_FTRACE=y
 CONFIG_HAVE_FTRACE_MCOUNT_RECORD=y
 CONFIG_HAVE_SYSCALL_TRACEPOINTS=y
