--- a/drivers/battery/charger/pca9468_charger/pca9468_charger.dtsi
+++ b/drivers/battery/charger/pca9468_charger/pca9468_charger.dtsi
@@ -16,3 +16,9 @@
 		pca9468,ta-max-vol = <10500000>; /* 10.5V */
 	};
 };
+
+/* /home/dpi/qb5_8814/workspace/P4_1716/android/kernel/kmodule/battery/charger/pca9468_charger_gki/pca9468_charger.t2s.dtsi */
+
+&pca9468_charger {
+		pca9468,input-itopoff = <400000>; /* 400mA */
+};
